@@ -1,5 +1,6 @@
 Next
-+ Allow zooming in crop dialog?
++ Allow zooming in crop dialog? (default to same view as main window so that
+  the user can essentially 'crop visible' by clicking ok right away
 + Try to highlight selected region of cropped image (or darken unselected region)
 + why is light/dark grey no longer used for transparency? (argh)
 + Image effect - saturation
